--- a/apps/reservations/.env
+++ b/apps/reservations/.env
@@ -1,11 +1,11 @@
 PORT=4000
-HI=Hello World dev!
 
-POSTGRES_DB=pgdata
-POSTGRES_USER=pczerox
-POSTGRES_PASSWORD=lordmaster0
-POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+AUTH_HOST=auth
+AUTH_PORT=5001
 
-# MONGODB_URI=mongodb://127.0.0.1/nestjs-microservices-build-and-deploy-scaleable-backend
+PAYMENTS_HOST=payments
+PAYMENTS_PORT=6001
+
 MONGODB_URI=mongodb://mongo/nestjs-microservices-build-and-deploy-scaleable-backend
+# MONGODB_URI=mongodb://mongo:27017/nestjs-microservices-build-and-deploy-scaleable-backend
+# MONGODB_URI=mongodb://127.0.0.1/nestjs-microservices-build-and-deploy-scaleable-backend
