--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,17 @@ services:
       - '4000:4000'
     volumes:
       - .:/usr/src/app
+  auth:
+    build:
+      context: .
+      dockerfile: ./apps/auth/Dockerfile
+      target: development
+    command: npm run start:dev auth
+    env_file:
+      - ./apps/auth/.env
+    ports:
+      - '5000:5000'
+    volumes:
+      - .:/usr/src/app
   mongo:
     image: mongo
