--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,17 @@ services:
       - '5000:5000'
     volumes:
       - .:/usr/src/app
+  payments:
+    build:
+      context: .
+      dockerfile: ./apps/payments/Dockerfile
+      target: development
+    command: npm run start:dev payments
+    env_file:
+      - ./apps/payments/.env
+    # ports:
+    #   - '6000:6000'
+    volumes:
+      - .:/usr/src/app
   mongo:
     image: mongo
