--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pino-pretty": "^10.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "stripe": "^13.5.0",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
