--- a/apps/payments/Dockerfile
+++ b/apps/payments/Dockerfile
@@ -4,14 +4,13 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY package-lock.json ./
-COPY tsconfig.json ./
-COPY nest-cli.json ./
+COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 RUN npm install
 
-COPY . .
-# COPY apps/payments apps/payments
-# COPY libs libs
+COPY apps/payments apps/payments
+COPY libs libs
 
 RUN npm run build payments
 
