--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -12,6 +12,8 @@ RUN npm install
 COPY apps/auth apps/auth
 COPY libs libs
 
+RUN cd apps/auth && npm install
+
 RUN npm run build auth
 
 FROM node:alpine AS production
